--- a/src/main/resources/templates/boardPages/save.html
+++ b/src/main/resources/templates/boardPages/save.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<th:block th:replace="commonPages/header" :: header"></th:block>
 <form action="/board/save" method="post" enctype="multipart/form-data">
     제목:<input type="text" name="boardTitle" placeholder="제목을입력해주세요"><br>
     작성자:<input type="text" name="boardWriter" placeholder="작성자를입력해주세요"><br>
